[package]
name = "streamz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
openssl = "0.10.68"
prost = "0.13.4"
prost-reflect = "0.14.5"
prost-types = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.137"
tungstenite = { version = "0.26.1", features = [ "native-tls" ] }

[build-dependencies]
prost-build = "0.13.4"
prost-reflect-build = "0.14.0"


