[package]
name = "streamz"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
chrono-tz = "0.10.1"
openssl = "0.10.68"
prost = "0.13.4"
prost-types = "0.13.4"
serde = "1.0.217"
serde_json = "1.0.137"
tungstenite = { version = "0.26.1", features = [ "native-tls" ] }

[build-dependencies]
prost-build = "0.13.4"


